--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
     <title>Migueliz Burguer</title>
     <link rel="icon" type="image/x-icon" href="assets\images\burguer.png" />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="stylesheet"
+      href="http://fonts.cdnfonts.com/css/harlow-solid-italic"
+    />
     <script src="app.js"></script>
   </head>
   <body>
-    <!-- !!! header !!! -->
+    <!-- !!! Header !!! -->
     <header>
       <a href="/#" class="logo">MigueLizBurguer's</a>
       <div class="toggle" onclick="toogleMenu()"></div>
