--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <p>Comparte el mejor momento con los que mas quieres</p>
       </div>
 
-      <button onClick="contacto()">
+      <button type="submit" onClick="contacto()">
         <span></span>
         <span></span>
         <span></span>
