--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
-      href="http://fonts.cdnfonts.com/css/harlow-solid-italic"
+      type="text/css"
+      href="./assets/fonts/harlow-solid-italic.css"
     />
     <script src="app.js"></script>
   </head>
