fuentes en general y fializando responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
       type="text/css"
       href="./assets/fonts/harlow-solid-italic.css"
     />
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/aclonica.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/kavoon.css" />
+    <link rel="stylesheet" type="text/css" href="./assets/fonts/Peralta.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/fonts/passion-one.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="./assets/fonts/PressStart2P.css"
+    />
     <script src="app.js"></script>
   </head>
   <body>
