--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <div class="toggle" onclick="toogleMenu()"></div>
       <ul class="menu">
         <li><a href="">Inicio</a></li>
-        <li><a href="#menu">Menú</a></li>
-        <li><a href="#servicios">Servicios</a></li>
-        <li><a href="#tiendas">Tiendas</a></li>
+        <li><a href="/Menu/menu.html">Menú</a></li>
+        <li><a href="/Servicios/servicios.html">Servicios</a></li>
+        <li><a href="/Tiendas/tiendas.html">Tiendas</a></li>
         <!-- <input type="text" class="search" /><label for="serch">Búscar</label> -->
       </ul>
     </header>
