--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <p>Comparte el mejor momento con los que mas quieres</p>
       </div>
 
-      <button type="submit" onClick="contacto()">
+      <button type="submit" onClick="realizarPedido()">
         <span></span>
         <span></span>
         <span></span>
