--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -1,1 +1,104 @@
-<h1>hola menu</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <script src="/app.js"></script> -->
+    <!-- CSS only -->
+    <link rel="stylesheet" href="./menu.css" />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <title>Menú</title>
+  </head>
+  <body>
+    <header>
+      <a href="/#" class="logo">MigueLizBurguer's</a>
+      <div class="toggle" onclick="toogleMenu()"></div>
+      <ul class="menu">
+        <li><a href="/index.html">Inicio</a></li>
+        <li><a href="/Menu/menu.html">Menú</a></li>
+        <li><a href="/Servicios/servicios.html">Servicios</a></li>
+        <li><a href="/Tiendas/tiendas.html">Tiendas</a></li>
+      </ul>
+    </header>
+    <section class="wrap">
+      <div class="container-fluid">
+        <div class="container">
+          <div class="row">
+            <div class="col-sm-4">
+              <div class="price-table">
+                <div class="price-head">
+                  <h4>Combo 1</h4>
+                  <h2>$15.000 <span>C/U</span></h2>
+                </div>
+                <div class="price-content">
+                  <ul>
+                    <li>Peso: 1KG</li>
+                    <li>
+                      Ingredientes: Lorem ipsum dolor sit, amet consectetur
+                      adipisicing elit.
+                    </li>
+                    <li>Incluye: papas gaseosa</li>
+                    <li>¡SOLO POR HOY!</li>
+                  </ul>
+                </div>
+                <div class="price-button">
+                  <a href="#">Agregar</a>
+                </div>
+              </div>
+            </div>
+            <!-- !!!!!!!!! -->
+            <div class="col-sm-4">
+              <div class="price-table">
+                <div class="price-head">
+                  <h4>Combo 2</h4>
+                  <h2>$20.000 <span>C/U</span></h2>
+                </div>
+                <div class="price-content">
+                  <ul>
+                    <li>Peso: 1.5KG</li>
+                    <li>
+                      Ingredientes: Lorem ipsum dolor sit, amet consectetur
+                      adipisicing elit.
+                    </li>
+                    <li>Incluye: papas gaseosa</li>
+                    <li>¡SOLO POR HOY!</li>
+                  </ul>
+                </div>
+                <div class="price-button">
+                  <a href="#">Agregar</a>
+                </div>
+              </div>
+            </div>
+            <!-- !!!!!!!!!!!!!! -->
+            <div class="col-sm-4">
+              <div class="price-table">
+                <div class="price-head">
+                  <h4>Combo 3</h4>
+                  <h2>$15.000 <span>C/U</span></h2>
+                </div>
+                <div class="price-content">
+                  <ul>
+                    <li>Peso: 1KG</li>
+                    <li>
+                      Ingredientes: Lorem ipsum dolor sit, amet consectetur
+                      adipisicing elit.
+                    </li>
+                    <li>Incluye: papas gaseosa</li>
+                    <li>¡SOLO POR HOY!</li>
+                  </ul>
+                </div>
+                <div class="price-button">
+                  <a href="#">Agregar</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
