--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <script src="/app.js"></script> -->
+    <script src="./menu.js"></script>
     <!-- CSS only -->
     <link rel="stylesheet" href="./menu.css" />
     <link
@@ -36,12 +36,12 @@
                 </div>
                 <div class="price-content">
                   <ul>
-                    <li>Peso: 1KG</li>
+                    <li><u>Peso:</u> 1KG</li>
                     <li>
-                      Ingredientes: Lorem ipsum dolor sit, amet consectetur
-                      adipisicing elit.
+                      <u>Ingredientes:</u> Lorem ipsum dolor sit, amet
+                      consectetur adipisicing elit.
                     </li>
-                    <li>Incluye: papas gaseosa</li>
+                    <li><u>Incluye:</u> papas gaseosa</li>
                     <li>¡SOLO POR HOY!</li>
                   </ul>
                 </div>
@@ -100,5 +100,6 @@
         </div>
       </div>
     </section>
+    <section class="wrap"></section>
   </body>
 </html>
