--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -13,8 +13,17 @@
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css"
+    />
     <link rel="stylesheet" href="./menu.css" />
-    <link rel="icon" type="image/x-icon" href="/assets/images/burguer.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/assets/images/icons/burguer.png"
+    />
+
     <title>Menú</title>
   </head>
   <body>
@@ -28,8 +37,9 @@
         <li><a href="/Tiendas/tiendas.html">Tiendas</a></li>
       </ul>
     </header>
-    <section class="wrap">
+    <!-- <section class="wrap">
       <div class="container-fluid">
+        <div class="title"><h2>Disfruta de nuestros mejores Combos</h2></div>
         <div class="container" id="container">
           <div class="row" id="row">
             <div class="col-sm-4">
@@ -54,7 +64,7 @@
                 </div>
               </div>
             </div>
-            <!-- !!!!!!!!! -->
+            <!-- !!!!!!!!! 
             <div class="col-sm-4">
               <div class="price-table">
                 <div class="price-head">
@@ -77,7 +87,7 @@
                 </div>
               </div>
             </div>
-            <!-- !!!!!!!!!!!!!! -->
+            <!-- !!!!!!!!!!!!!! 
             <div class="col-sm-4">
               <div class="price-table">
                 <div class="price-head">
@@ -103,8 +113,261 @@
           </div>
         </div>
       </div>
+    </section> -->
+    <section id="section">
+      <div class="containerBg">
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img
+              src="/assets/images/cards/burguerChicken.jpg"
+              alt="burguerChicken"
+            />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Burguer Chicken</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$13.450</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img
+              src="/assets/images/cards/burguersPapas.jpg"
+              alt="Burguer doble carne y papas"
+            />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Doble carne y papas</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$23.450</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img
+              src="/assets/images/cards/lunchPolloPapas.jpg"
+              alt="lunchPolloPapas"
+            />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Blunch Pollo Papas</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$10.450</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img
+              src="/assets/images/cards/polloNaranja.png"
+              alt="polloNaranja"
+            />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Pollo Naranja</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$25.650</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img src="/assets/images/cards/sachipapa1.png" alt="sachipapa1" />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Sachipapa</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$8.350</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img
+              src="/assets/images/cards/salchipapaCilantro.png"
+              alt="salchipapaCilantro"
+            />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Salchipapa Cilantro</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$8.350</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img
+              src="/assets/images/cards/nuggetsPapas.jpg"
+              alt="nuggetsPapas"
+            />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Nuggets Papas</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$14.990</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- !!! -->
+        <div class="card">
+          <div class="imgBx">
+            <img src="/assets/images/cards/carneAsada.jpg" alt="carneAsada" />
+            <ul>
+              <li>
+                <i class="fa fa-heart" aria-hidden="true"></i>
+              </li>
+              <li>
+                <i class="fa fa-eye" aria-hidden="true"></i>
+              </li>
+            </ul>
+          </div>
+          <div class="content">
+            <div class="productName">
+              <h3>Carne Asada</h3>
+            </div>
+            <div class="priceRating">
+              <h2>$28.790</h2>
+              <div class="rating">
+                <i class="fa fa-star" aria-hidden="false"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star" aria-hidden="true"></i>
+                <i class="fa fa-star grey" aria-hidden="true"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <section class="wrap"></section>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./menu.js"></script>
