--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Migueliz Burguer</title>
-    <link rel="icon" type="image/x-icon" href="assets\images\burguer.png" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="assets/images/icons/burguer.png"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link
       rel="stylesheet"
@@ -63,17 +67,23 @@
       <ul class="sci">
         <li>
           <a href="https://www.facebook.com/"
-            ><img src="./assets/images/facebook.png" alt="facebook"
+            ><img
+              src="./assets/images/icons/facebook.png"
+              alt="facebook"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="./assets/images/twitter.png" alt="twitter"
+            ><img
+              src="./assets/images/icons/twitter.png"
+              alt="twitter"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img src="./assets/images/instagram.png" alt="instagram"
+            ><img
+              src="./assets/images/icons/instagram.png"
+              alt="instagram"
           /></a>
         </li>
       </ul>
