--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -37,7 +37,8 @@
         <li><a href="/Tiendas/tiendas.html">Tiendas</a></li>
       </ul>
     </header>
-    <!-- <section class="wrap">
+    <!---->
+    <section class="wrap">
       <div class="container-fluid">
         <div class="title"><h2>Disfruta de nuestros mejores Combos</h2></div>
         <div class="container" id="container">
@@ -64,7 +65,7 @@
                 </div>
               </div>
             </div>
-            <!-- !!!!!!!!! 
+            <!-- !!!!!!!!! -->
             <div class="col-sm-4">
               <div class="price-table">
                 <div class="price-head">
@@ -87,7 +88,7 @@
                 </div>
               </div>
             </div>
-            <!-- !!!!!!!!!!!!!! 
+            <!-- !!!!!!!!!!!!!! -->
             <div class="col-sm-4">
               <div class="price-table">
                 <div class="price-head">
@@ -113,7 +114,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
     <section id="section">
       <div class="containerBg">
         <!-- !!! -->
