--- a/Menu/menu.html
+++ b/Menu/menu.html
@@ -43,6 +43,7 @@
         <div class="title"><h2>Disfruta de nuestros mejores Combos</h2></div>
         <div class="container" id="container">
           <div class="row" id="row">
+            <!-- !!!!!!!!! -->
             <div class="col-sm-4">
               <div class="price-table">
                 <div class="price-head">
@@ -124,18 +125,25 @@
               src="/assets/images/cards/burguerChicken.jpg"
               alt="burguerChicken"
             />
-            <ul>
+            <ul class="action">
               <li>
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(0)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Burguer Chicken</h3>
+              <span hidden>#54m4652n1</span>
             </div>
             <div class="priceRating">
               <h2>$13.450</h2>
@@ -156,18 +164,25 @@
               src="/assets/images/cards/burguersPapas.jpg"
               alt="Burguer doble carne y papas"
             />
-            <ul>
-              <li>
+            <ul class="action">
+              <li class="active">
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(1)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Doble carne y papas</h3>
+              <span hidden>#54m4652n2</span>
             </div>
             <div class="priceRating">
               <h2>$23.450</h2>
@@ -188,18 +203,25 @@
               src="/assets/images/cards/lunchPolloPapas.jpg"
               alt="lunchPolloPapas"
             />
-            <ul>
-              <li>
+            <ul class="action">
+              <li class="active">
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(2)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Blunch Pollo Papas</h3>
+              <span hidden>#54m4652n3</span>
             </div>
             <div class="priceRating">
               <h2>$10.450</h2>
@@ -220,18 +242,25 @@
               src="/assets/images/cards/polloNaranja.png"
               alt="polloNaranja"
             />
-            <ul>
+            <ul class="action">
               <li>
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(3)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Pollo Naranja</h3>
+              <span hidden>#54m4652n4</span>
             </div>
             <div class="priceRating">
               <h2>$25.650</h2>
@@ -249,18 +278,25 @@
         <div class="card">
           <div class="imgBx">
             <img src="/assets/images/cards/sachipapa1.png" alt="sachipapa1" />
-            <ul>
-              <li>
+            <ul class="action">
+              <li class="active">
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(4)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Sachipapa</h3>
+              <span hidden>#54m4652n5</span>
             </div>
             <div class="priceRating">
               <h2>$8.350</h2>
@@ -281,18 +317,25 @@
               src="/assets/images/cards/salchipapaCilantro.png"
               alt="salchipapaCilantro"
             />
-            <ul>
+            <ul class="action">
               <li>
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(5)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Salchipapa Cilantro</h3>
+              <span hidden>#54m4652n6</span>
             </div>
             <div class="priceRating">
               <h2>$8.350</h2>
@@ -313,18 +356,25 @@
               src="/assets/images/cards/nuggetsPapas.jpg"
               alt="nuggetsPapas"
             />
-            <ul>
+            <ul class="action">
               <li>
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(6)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Nuggets Papas</h3>
+              <span hidden>#54m4652n7</span>
             </div>
             <div class="priceRating">
               <h2>$14.990</h2>
@@ -342,18 +392,25 @@
         <div class="card">
           <div class="imgBx">
             <img src="/assets/images/cards/carneAsada.jpg" alt="carneAsada" />
-            <ul>
-              <li>
+            <ul class="action">
+              <li class="active">
                 <i class="fa fa-heart" aria-hidden="true"></i>
+                <span>Agregar a Favoritos</span>
+              </li>
+              <li onClick="getDetails(7)">
+                <i class="fa fa-eye" aria-hidden="true"></i>
+                <span>Ver Detalles</span>
               </li>
               <li>
-                <i class="fa fa-eye" aria-hidden="true"></i>
+                <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                <span>Agregar al Carrito</span>
               </li>
             </ul>
           </div>
           <div class="content">
             <div class="productName">
               <h3>Carne Asada</h3>
+              <span hidden>#54m4652n8</span>
             </div>
             <div class="priceRating">
               <h2>$28.790</h2>
