--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <li><a href="/Menu/menu.html">Menú</a></li>
         <li><a href="/Servicios/servicios.html">Servicios</a></li>
         <li><a href="/Tiendas/tiendas.html">Tiendas</a></li>
+
         <!-- <input type="text" class="search" /><label for="serch">Búscar</label> -->
       </ul>
     </header>
@@ -67,23 +68,17 @@
       <ul class="sci">
         <li>
           <a href="https://www.facebook.com/"
-            ><img
-              src="./assets/images/icons/facebook.png"
-              alt="facebook"
+            ><img src="./assets/images/icons/facebook.png" alt="facebook"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img
-              src="./assets/images/icons/twitter.png"
-              alt="twitter"
+            ><img src="./assets/images/icons/twitter.png" alt="twitter"
           /></a>
         </li>
         <li>
           <a href="#"
-            ><img
-              src="./assets/images/icons/instagram.png"
-              alt="instagram"
+            ><img src="./assets/images/icons/instagram.png" alt="instagram"
           /></a>
         </li>
       </ul>
