--- a/Tiendas/tiendas.html
+++ b/Tiendas/tiendas.html
@@ -46,19 +46,56 @@ src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15930.946742673324!2d
             <div class="title">San luis 2</div>
             <div class="containerPosition">
               <p><label for="direccion">Dirección:</label>
-              Carrera 83 # 43 - 15</p>
+                Carrera 83 # 43 - 15
+              </p>
               <p><label for="telefono">Teléfono:</label>
-              324-397-3949</p>
-              <label for="calificacion">Calificación:</label>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
-              <i class="fa fa-star" aria-hidden="true"></i>
+                324-397-3949</p>
+              <p class="rating"><label for="calificacion">Calificación:
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i
+                ></label>
+              </p>
             </div>
           </li>
-          <li onclick="getTienda('alcazares')">Alcazares</li>
-          <li onclick="getTienda('centro')">Centro</li>
+          <li onclick="getTienda('alcazares')">
+            <div class="title">Alcazares</div>
+            <div class="containerPosition">
+              <p><label for="direccion">Dirección:</label>
+                Carrera 83 # 43 - 15
+              </p>
+              <p><label for="telefono">Teléfono:</label>
+                324-397-3949</p>
+              <p class="rating"><label for="calificacion">Calificación:
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i
+                ></label>
+              </p>
+            </div>
+          </li>
+          <li onclick="getTienda('centro')">
+            <div class="title">Centro</div>
+            <div class="containerPosition">
+              <p><label for="direccion">Dirección:</label>
+                Carrera 83 # 43 - 15
+              </p>
+              <p><label for="telefono">Teléfono:</label>
+                324-397-3949</p>
+              <p class="rating"><label for="calificacion">Calificación:
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i>
+                  <i class="fa fa-star" aria-hidden="true"></i
+                ></label>
+              </p>
+            </div>
+          </li>
         </ul>
       </div>
     </div>
