--- a/Tiendas/tiendas.html
+++ b/Tiendas/tiendas.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="./Tiendas.js"></script>
     <link
       href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
       rel="stylesheet"
@@ -27,7 +26,6 @@
           id="map"
           width="600"
           height="100%"
-          style="border: 0"
           allowfullscreen=""
           loading="lazy"
           referrerpolicy="no-referrer-when-downgrade"
@@ -50,14 +48,15 @@ src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15930.946742673324!2d
               </p>
               <p><label for="telefono">Teléfono:</label>
                 324-397-3949</p>
-              <p class="rating"><label for="calificacion">Calificación:
+              <label for="calificacion">Calificación:
+                <p class="rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i
-                ></label>
-              </p>
+                ></p>
+              </label>
             </div>
           </li>
           <li onclick="getTienda('alcazares')">
@@ -68,14 +67,15 @@ src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15930.946742673324!2d
               </p>
               <p><label for="telefono">Teléfono:</label>
                 324-397-3949</p>
-              <p class="rating"><label for="calificacion">Calificación:
+              <label for="calificacion">Calificación:
+                <p class="rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i
-                ></label>
-              </p>
+                ></p>
+              </label>
             </div>
           </li>
           <li onclick="getTienda('centro')">
@@ -86,18 +86,20 @@ src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d15930.946742673324!2d
               </p>
               <p><label for="telefono">Teléfono:</label>
                 324-397-3949</p>
-              <p class="rating"><label for="calificacion">Calificación:
+              <label for="calificacion">Calificación:
+                <p class="rating">
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i>
                   <i class="fa fa-star" aria-hidden="true"></i
-                ></label>
-              </p>
+                ></p>
+              </label>
             </div>
           </li>
         </ul>
       </div>
     </div>
   </body>
+  <script src="./Tiendas.js"></script>
 </html>
